--- a/estilos/style.css
+++ b/estilos/style.css
@@ -11,7 +11,9 @@ body, html {
     width: 100vw;
     height: 100vh;
 }
-body{
+body{display: flex;
+    justify-content: center;
+    align-items: center;
     background: black url(../imagens/back-phone.jpg) no-repeat;
     background-size: cover;
     background-position: center center;
@@ -20,8 +22,8 @@ body{
 }
 main{
     background-color: rgba(255, 255, 255, 0.788);
-    width: 400px;
-    margin: auto;
+    width: 300px;
+    
     margin-top: 10px;
     border-radius: 10px;
     padding: 10px;
